--- a/index.html
+++ b/index.html
@@ -3,9 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home-work</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-greeting">All Thinks Are Possible If You believe</h1>
+                <p class="banner-discription"><small>are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</small></p>
+                <button class="btn-primary">Contact Us</button>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="about">
+            <div class="about-person">
+                <img class="person" src="images/person.png" alt="">
+                <div class="person-content">
+                    <h1 class="banner-greeting">My failures of previous year</h1>
+                    <p>Contrary to popular belief, Lorem Ipsum is not
+                        simply random text. It has roots in a piece of
+                        classical Latin literature from 45 BC, making it over
+                        2000 years old. Richard McClintock.</p>
+                    <ul>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply</li>
+                        <li>Contrary to popular belief, is not simply</li>
+                        <li>Contrary to popular simply.</li>
+                    </ul>
+                </div>
+            </div>
+
+        </section>
+
+        <section>
+            <h1 class="detals-header">My Plans</h1>
+            <div class="detals">
+                <div class="detals-content">
+                    <img src="images/icons/web.png" alt="">
+                    <h3>Web Development</h3>
+                    <h4>I want to start</h4>
+                </div>
+                <div class="detals-content">
+                    <img src="images/icons/js.png" alt="">
+                    <h3>Javascript</h3>
+                    <h4>I want to learn</h4>
+                </div>
+                <div class="detals-content">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3>Smoking Habit</h3>
+                    <h4>I want to end</h4>
+                </div>
+                <div class="detals-content">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3>ecommerce</h3>
+                    <h4>I want to develop</h4>
+                </div>
+            </div>
+        </section>
+
+        <section class="last">
+            <div class="last-conten">
+                <h1 class="last-heading">Awlays keep a positive mindset</h1>
+                <button class="btn-primary">Call Now</button>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+            <div class="footer-fast">
+                <h1>Future</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+
+                <div>
+                    <a href=""><img src="images/icons/fb.png" alt=""></a>
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                    <a href=""><img src="images/icons/youtube.png" alt=""></a>
+                </div>
+
+            </div>
+
+            <div class="footer-fast">
+                <h3>Subscribe</h3>
+                <form action="">
+                    <input type="email" placeholder="Enter your email" name="" id="">
+                    <br>
+                    <br>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+            </div>
+
+    </footer>
 </body>
 </html>
