--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="about-person">
                 <img class="person" src="images/person.png" alt="">
                 <div class="person-content">
-                    <h1 class="banner-greeting">My failures of previous year</h1>
+                    <h1 class="about-header">My failures of previous year</h1>
                     <p>Contrary to popular belief, Lorem Ipsum is not
                         simply random text. It has roots in a piece of
                         classical Latin literature from 45 BC, making it over
